# renewsable

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PI_VERIFICATION.md  README.md  RESEARCH.md  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
.kiro/specs/daily-paper/: brief.md  design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/device-profiles/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/epub-output/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/mac-manual-mode/: design.md  requirements.md  research.md  spec.json  tasks.md
.kiro/specs/trafilatura-extractor/: design.md  requirements.md  research.md  spec.json  tasks.md
config/: README.md  config.example.json
scripts/: README.md  install-mac.sh  install-pi.sh
src/renewsable/: __init__.py  __main__.py  articles.py  builder.py  cli.py  config.py  epub.py  errors.py  http.py  logging_setup.py  pairing.py  paths.py  profiles.py  scheduler.py  uploader.py
src/renewsable/templates/: renewsable.service.tmpl  renewsable.timer.tmpl
tests/: test_articles.py  test_builder.py  test_cli.py  test_config.py  test_epub.py  test_errors.py  test_http.py  test_logging.py  test_pairing.py  test_paths.py  test_pipeline.py  test_profiles.py  test_scheduler.py  test_uploader.py
tests/fixtures/: config.bad_schedule.json  config.missing_field.json  config.profile_object.json  config.profile_string.json  config.profiles_list.json  config.valid.json  fake_goosepaper.sh  fake_rmapi.sh
