[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renewsable"
version = "0.1.0"
description = "Daily news digest PDF pipeline for reMarkable 2, scheduled on a Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "bnc" }]
dependencies = [
    "click>=8.1",
    # PyPI goosepaper==0.7.1 does not exist; 0.7.0 has a broken sdist.
    # Pin via git tag per spec task 1.1 implementation notes.
    "goosepaper @ git+https://github.com/j6k4m8/goosepaper@v0.7.1",
    # goosepaper's __main__ eagerly imports rmapy (legacy upload client) but
    # does not declare it. We never use that code path, but importing
    # goosepaper via `goosepaper --help` fails without it. Declared here
    # so the transitive import resolves on the Pi.
    "rmapy",
    # readability-lxml 0.8.4.1 regressed its encoding-detection path: its
    # RE_CHARSET/RE_PRAGMA/RE_XML regexes are compiled as str, but some
    # article responses reach them as bytes and raise
    # `TypeError: cannot use a string pattern on a bytes-like object`.
    # 0.8.1 is the last version without this mismatch. Pin until the
    # upstream fix lands.
    "readability-lxml==0.8.1",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
renewsable = "renewsable.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"renewsable.templates" = ["*.tmpl"]
