[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renewsable"
version = "0.1.0"
description = "Daily news digest PDF pipeline for reMarkable 2, scheduled on a Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "bnc" }]
dependencies = [
    "click>=8.1",
    # PyPI goosepaper==0.7.1 does not exist; 0.7.0 has a broken sdist.
    # Pin via git to the kbence fork, which carries a one-line fix for
    # the per-provider `limit` being silently capped at the method-level
    # default (upstream issue: config `limit: 15` still produced 5 items).
    # Pinned to an exact commit SHA so the build is reproducible.
    "goosepaper @ git+https://github.com/kbence/goosepaper@02887c2",
    # goosepaper's __main__ eagerly imports rmapy (legacy upload client) but
    # does not declare it. We never use that code path, but importing
    # goosepaper via `goosepaper --help` fails without it. Declared here
    # so the transitive import resolves on the Pi.
    "rmapy",
    # readability-lxml 0.8.4.1 regressed its encoding-detection path: its
    # RE_CHARSET/RE_PRAGMA/RE_XML regexes are compiled as str, but some
    # article responses reach them as bytes and raise
    # `TypeError: cannot use a string pattern on a bytes-like object`.
    # 0.8.1 is the last version without this mismatch. Pin until the
    # upstream fix lands.
    "readability-lxml==0.8.1",
    # lxml >= 5 moved lxml.html.clean into a separate package. readability-lxml
    # still imports from the old location, so we must install the detached
    # module explicitly. Without this, goosepaper's RSS provider crashes with
    # `ImportError: lxml.html.clean module is now a separate project`.
    "lxml_html_clean",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
renewsable = "renewsable.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"renewsable.templates" = ["*.tmpl"]
