[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "renewsable"
version = "0.1.0"
description = "Daily news digest EPUB pipeline for reMarkable 2, scheduled on a Raspberry Pi."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Bence Kiglics" }]
dependencies = [
    "click>=8.1",
    "ebooklib>=0.18",
    "feedparser>=6.0",
    "trafilatura>=2.0.0,<3",
    # readability-lxml 0.8.4.1 regressed its encoding-detection path: its
    # RE_CHARSET/RE_PRAGMA/RE_XML regexes are compiled as str, but some
    # article responses reach them as bytes and raise
    # `TypeError: cannot use a string pattern on a bytes-like object`.
    # 0.8.1 is the last version without this mismatch. Pin until the
    # upstream fix lands.
    "readability-lxml==0.8.1",
    # lxml >= 5 moved lxml.html.clean into a separate package. readability-lxml
    # still imports from the old location, so we must install the detached
    # module explicitly. Without this, readability-lxml's article extraction
    # crashes with `ImportError: lxml.html.clean module is now a separate
    # project`.
    "lxml_html_clean",
]

[project.urls]
Homepage = "https://github.com/kbence/renewsable"
Repository = "https://github.com/kbence/renewsable"
Issues = "https://github.com/kbence/renewsable/issues"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
renewsable = "renewsable.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"renewsable.templates" = ["*.tmpl"]
